JSQL Parser for parsing sql to stream pipeline api